web-infras/parser/tests/fixtures/esprima/ES6/arrow-function/invalid-param-strict-mode/output.txt
[SyntaxError]: 'arguments'/'eval' can't be defined or assigned to in strict mode code (1,1)
1|eval => {"use strict"};
 |^
